<resources>
    <string name="app_name">Warabisa</string>
    <string name="login">Login</string>
    <string name="Welcome">Selamat Datang!</string>
    <string name="desc">Silahkan klik login untuk memulai</string>
    <string name="signup">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="you_are_not_a_member">Tidak memiliki akun?</string>
    <string name="buat_akun">Buat akun</string>
</resources>